--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -20,3 +20,9 @@ newlines.topLevelStatementBlankLines = [
     regex = "Import|Class|Trait|Object"
   }
 ]
+rewrite.scala3.convertToNewSyntax = true
+runner.dialectOverride {
+  allowSignificantIndentation = false
+  allowAsForImportRename = false
+  allowStarWildcardImport = false
+}
