--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,6 +13,7 @@ jobs:
         - 21
     steps:
     - uses: actions/checkout@v4
+    - uses: sbt/setup-sbt@v1
     - uses: actions/setup-java@v4
       with:
         java-version: "${{matrix.java}}"
