--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,7 +3,7 @@ on:
   push:
 jobs:
   test:
-    runs-on: ubuntu-latest
+    runs-on: "ubuntu-22.04"
     timeout-minutes: 20
     strategy:
       fail-fast: false
