--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
     - uses: actions/setup-java@v5
       with:
         java-version: "${{matrix.java}}"
-        distribution: adopt
+        distribution: zulu
         cache: sbt
     - run: sbt scalafmtSbt "+ scalafixAll" "+ scalafmtAll"
     - run: git diff --exit-code
