--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,14 +10,14 @@ jobs:
       matrix:
         java:
         - 11
-        - 21
+        - 25
     steps:
     - uses: actions/checkout@v5
     - uses: sbt/setup-sbt@v1
     - uses: actions/setup-java@v5
       with:
         java-version: "${{matrix.java}}"
-        distribution: adopt
+        distribution: zulu
         cache: sbt
     - run: sbt scalafmtSbt "+ scalafixAll" "+ scalafmtAll"
     - run: git diff --exit-code
